# CVFeatureFinder

./: CMakeLists.txt  CMakeLists.txt~  README.md
Controller/: CVFF_Controller.cpp  CVFF_Controller.h  FFController.h  main.cpp
Model/: FeatureFinder.cpp  FeatureFinder.h  ImageHelper.cpp  ImageHelper.h  Imagehelper.h
View/: CVFF_MainWindow.cpp  CVFF_MainWindow.h
pics/: defaultListfile.txt  defaultListfile.txt~  defaultListfile1.txt
